--- a/images/sepp/Dockerfile
+++ b/images/sepp/Dockerfile
@@ -11,15 +11,30 @@ FROM ubuntu:${UBUNTU_VERSION}
 # build-time arguments
 ARG DEBIAN_FRONTEND="noninteractive"
 
-# install dependencies
-RUN apt-get update && apt-get install libgnutls28-dev libgcrypt-dev libtalloc-dev \
-    libnghttp2-dev libmicrohttpd-dev libcurl4-gnutls-dev libyaml-dev -y
+RUN rm -rf /var/lib/apt/lists/*                             
+RUN apt-get clean   
+RUN apt-get upgrade -y
 
+# install dependencies including networking tools for troubleshooting
+RUN apt-get update && apt-get install -y \
+    libgnutls28-dev \
+    libgcrypt-dev \
+    libtalloc-dev \
+    libnghttp2-dev \
+    libmicrohttpd-dev \
+    libcurl4-gnutls-dev \
+    libyaml-dev \
+    openssl \
+    ca-certificates \
+    iputils-ping \
+    iproute2 \
+    net-tools \
+    dnsutils \
+    curl
+    
 # copy executable, default config and libs
 COPY --from=builder /open5gs/install/bin/open5gs-seppd /usr/local/bin/open5gs-seppd
 COPY --from=builder /open5gs/install/etc/open5gs/sepp1.yaml /etc/open5gs/default/sepp.yaml
-COPY --from=builder /open5gs/install/etc/open5gs/tls/ca.crt /open5gs/install/etc/open5gs/tls/sepp1.crt \
-/open5gs/install/etc/open5gs/tls/sepp1.key /etc/open5gs/default/tls/
 COPY --from=builder /open5gs/install/lib/*/libogsproto.so.2 /open5gs/install/lib/*/libogscore.so.2 \
 /open5gs/install/lib/*/libogssbi.so.2 /open5gs/install/lib/*/libogsapp.so.2 /open5gs/install/lib/*/libogssbi-openapi.so.2 \
 /open5gs/install/lib/*/libogscrypt.so.2 /usr/local/lib/
@@ -27,10 +42,16 @@ COPY --from=builder /open5gs/install/lib/*/libogsproto.so.2 /open5gs/install/lib
 # configure dynamically linked libraries
 RUN ldconfig
 
-# create directory to store the logs
-RUN mkdir -p /var/log/open5gs/
+# create directory to store the logs and certs
+RUN mkdir -p /var/log/open5gs/ \
+    && mkdir -p /etc/open5gs/default/tls/
 
+# Copy the entrypoint script
+# COPY entrypoint.sh /entrypoint.sh
+# RUN chmod +x /entrypoint.sh
+
+# ENTRYPOINT ["/entrypoint.sh"]
 ENTRYPOINT [ "open5gs-seppd" ]
 
-# use CMD to provide arguments to ENTRYPOINT (can be overridden by user)
-CMD [ "-c", "/etc/open5gs/default/sepp.yaml" ]
+# use CMD to provide arguments to the script
+CMD ["-c", "/etc/open5gs/default/sepp.yaml"]
