--- a/configs/roaming/v-sepp.yaml
+++ b/configs/roaming/v-sepp.yaml
@@ -15,27 +15,27 @@ sepp:
         verify: true
   sbi:
     server:
-      - address: sepp.5gc.mnc070.mcc999.3gppnetwork.org
-        port: 80
+    - address: sepp.5gc.mnc070.mcc999.3gppnetwork.org
+      port: 80
     client:
-      nrf:
-        - uri: http://nrf.5gc.mnc070.mcc999.3gppnetwork.org:80
+      scp:
+      - uri: http://scp.5gc.mnc070.mcc999.3gppnetwork.org:80
   n32:
     server:
-      - sender: sepp2.localdomain
+    - sender: sepp2.localdomain
 
+      scheme: https
+      address: 0.0.0.0
+      port: 7778
+      n32f:
         scheme: https
         address: 0.0.0.0
-        port: 7778
-        n32f:
-          scheme: https
-          address: 0.0.0.0
-          port: 7779
+        port: 7779
     client:
       sepp:
-        - receiver: sepp1.localdomain
-          uri: https://sepp1.localdomain:7778
+      - receiver: sepp1.localdomain
+        uri: https://sepp1.localdomain:7778
+        verify_client: true
+        n32f:
+          uri: https://sepp1.localdomain:7779
           verify_client: true
-          n32f:
-            uri: https://sepp1.localdomain:7779
-            verify_client: true
