--- a/compose-files/roaming/docker-compose.yaml
+++ b/compose-files/roaming/docker-compose.yaml
@@ -120,7 +120,25 @@ services:
     depends_on:
       - db
       - h-nrf
-
+  h-scp:
+    container_name: h-scp
+    image: 'scp:${OPEN5GS_VERSION}'
+    build:
+      context: ../../images/scp
+      args:
+        - OPEN5GS_VERSION=${OPEN5GS_VERSION}
+        - UBUNTU_VERSION=${UBUNTU_VERSION}
+    command: '-c /etc/open5gs/custom/scp.yaml'
+    networks:
+      open5gs:
+        ipv4_address: 10.33.33.14
+        aliases:
+          - scp.5gc.mnc001.mcc001.3gppnetwork.org
+    configs:
+      - source: h-scp_config
+        target: /etc/open5gs/custom/scp.yaml
+    depends_on:
+      - h-nrf
   h-sepp:
     container_name: h-sepp
     image: 'sepp:${OPEN5GS_VERSION}'
@@ -316,6 +334,26 @@ services:
     privileged: true
     cap_add:
       - NET_ADMIN
+
+  v-scp:
+    container_name: v-scp
+    image: 'scp:${OPEN5GS_VERSION}'
+    build:
+      context: ../../images/scp
+      args:
+        - OPEN5GS_VERSION=${OPEN5GS_VERSION}
+        - UBUNTU_VERSION=${UBUNTU_VERSION}
+    command: '-c /etc/open5gs/custom/scp.yaml'
+    networks:
+      open5gs:
+        ipv4_address: 10.33.33.38
+        aliases:
+          - scp.5gc.mnc070.mcc999.3gppnetwork.org
+    configs:
+      - source: v-scp_config
+        target: /etc/open5gs/custom/scp.yaml
+    depends_on:
+      - v-nrf
 
   v-sepp:
     container_name: v-sepp
