--- a/configs/roaming/h-udm.yaml
+++ b/configs/roaming/h-udm.yaml
@@ -7,8 +7,8 @@ global:
 udm:
   sbi:
     server:
-      - address: udm.5gc.mnc001.mcc001.3gppnetwork.org
-        port: 80
+    - address: udm.5gc.mnc001.mcc001.3gppnetwork.org
+      port: 80
     client:
-      nrf:
-        - uri: http://nrf.5gc.mnc001.mcc001.3gppnetwork.org:80
+      scp:
+      - uri: http://scp.5gc.mnc001.mcc001.3gppnetwork.org:80
