--- a/configs/roaming/v-amf.yaml
+++ b/configs/roaming/v-amf.yaml
@@ -7,53 +7,53 @@ global:
 amf:
   sbi:
     server:
-      - address: amf.5gc.mnc070.mcc999.3gppnetwork.org
-        port: 80
+    - address: amf.5gc.mnc070.mcc999.3gppnetwork.org
+      port: 80
     client:
-      nrf:
-        - uri: http://nrf.5gc.mnc070.mcc999.3gppnetwork.org:80
+      scp:
+      - uri: http://scp.5gc.mnc070.mcc999.3gppnetwork.org:80
   ngap:
     server:
-      - address: amf.5gc.mnc070.mcc999.3gppnetwork.org
+    - address: amf.5gc.mnc070.mcc999.3gppnetwork.org
   access_control:
-    - plmn_id:
-        mcc: 999
-        mnc: 70
-    - plmn_id:
-        mcc: 001
-        mnc: 01
+  - plmn_id:
+      mcc: 999
+      mnc: 70
+  - plmn_id:
+      mcc: 1
+      mnc: 1
   guami:
-    - plmn_id:
-        mcc: 999
-        mnc: 70
-      amf_id:
-        region: 2
-        set: 1
+  - plmn_id:
+      mcc: 999
+      mnc: 70
+    amf_id:
+      region: 2
+      set: 1
   tai:
-    - plmn_id:
-        mcc: 999
-        mnc: 70
-      tac: 1
-    - plmn_id:
-        mcc: 001
-        mnc: 01
-      tac: 1
+  - plmn_id:
+      mcc: 999
+      mnc: 70
+    tac: 1
+  - plmn_id:
+      mcc: 1
+      mnc: 1
+    tac: 1
   plmn_support:
-    - plmn_id:
-        mcc: 999
-        mnc: 70
-      s_nssai:
-        - sst: 1
-          sd: 000001
-    - plmn_id:
-        mcc: 001
-        mnc: 01
-      s_nssai:
-        - sst: 1
-          sd: 000001
+  - plmn_id:
+      mcc: 999
+      mnc: 70
+    s_nssai:
+    - sst: 1
+      sd: 1
+  - plmn_id:
+      mcc: 1
+      mnc: 1
+    s_nssai:
+    - sst: 1
+      sd: 1
   security:
-    integrity_order: [NIA2, NIA0, NIA1]
-    ciphering_order: [NEA0, NEA2, NEA1]
+    integrity_order: [ NIA2, NIA0, NIA1 ]
+    ciphering_order: [ NEA0, NEA2, NEA1 ]
   network_name:
     full: Open5GS
   amf_name: open5gs-amf0
