--- a/configs/roaming/v-nssf.yaml
+++ b/configs/roaming/v-nssf.yaml
@@ -7,13 +7,13 @@ global:
 nssf:
   sbi:
     server:
-      - address: nssf.5gc.mnc070.mcc999.3gppnetwork.org
-        port: 80
+    - address: nssf.5gc.mnc070.mcc999.3gppnetwork.org
+      port: 80
     client:
-      nrf:
-        - uri: http://nrf.5gc.mnc070.mcc999.3gppnetwork.org:80
+      scp:
+      - uri: http://scp.5gc.mnc070.mcc999.3gppnetwork.org:80
       nsi:
-        - uri: http://nrf.5gc.mnc070.mcc999.3gppnetwork.org:80
-          s_nssai:
-            sst: 1
-            sd: 000001
+      - uri: http://nrf.5gc.mnc070.mcc999.3gppnetwork.org:80
+        s_nssai:
+          sst: 1
+          sd: 1
