--- a/configs/roaming/v-pcf.yaml
+++ b/configs/roaming/v-pcf.yaml
@@ -7,32 +7,32 @@ global:
 pcf:
   sbi:
     server:
-      - address: pcf.5gc.mnc070.mcc999.3gppnetwork.org
-        port: 80
+    - address: pcf.5gc.mnc070.mcc999.3gppnetwork.org
+      port: 80
     client:
-      nrf:
-        - uri: http://nrf.5gc.mnc070.mcc999.3gppnetwork.org:80
+      scp:
+      - uri: http://scp.5gc.mnc070.mcc999.3gppnetwork.org:80
   policy:
-    - plmn_id:
-        mcc: 001
-        mnc: 01
-      slice:
-        - sst: 1
-          sd: 000001
-          default_indicator: true
-          session:
-            - name: internet
-              type: 1
-              ambr:
-                downlink:
-                  value: 1
-                  unit: 3
-                uplink:
-                  value: 1
-                  unit: 3
-              qos:
-                index: 9
-                arp:
-                  priority_level: 8
-                  pre_emption_vulnerability: 1
-                  pre_emption_capability: 1
+  - plmn_id:
+      mcc: 1
+      mnc: 1
+    slice:
+    - sst: 1
+      sd: 1
+      default_indicator: true
+      session:
+      - name: internet
+        type: 1
+        ambr:
+          downlink:
+            value: 1
+            unit: 3
+          uplink:
+            value: 1
+            unit: 3
+        qos:
+          index: 9
+          arp:
+            priority_level: 8
+            pre_emption_vulnerability: 1
+            pre_emption_capability: 1
