--- a/configs/roaming/v-smf.yaml
+++ b/configs/roaming/v-smf.yaml
@@ -10,8 +10,8 @@ smf:
       - address: smf.5gc.mnc070.mcc999.3gppnetwork.org
         port: 80
     client:
-      nrf:
-        - uri: http://nrf.5gc.mnc070.mcc999.3gppnetwork.org:80
+      scp:
+        - uri: http://scp.5gc.mnc070.mcc999.3gppnetwork.org:80
   pfcp:
     server:
       - address: smf.5gc.mnc070.mcc999.3gppnetwork.org
