--- a/configs/roaming/h-udm.yaml
+++ b/configs/roaming/h-udm.yaml
@@ -10,5 +10,5 @@ udm:
       - address: udm.5gc.mnc001.mcc001.3gppnetwork.org
         port: 80
     client:
-      nrf:
-        - uri: http://nrf.5gc.mnc001.mcc001.3gppnetwork.org:80
+      scp:
+        - uri: http://scp.5gc.mnc001.mcc001.3gppnetwork.org:80
