--- a/configs/roaming/v-ausf.yaml
+++ b/configs/roaming/v-ausf.yaml
@@ -10,5 +10,5 @@ ausf:
       - address: ausf.5gc.mnc070.mcc999.3gppnetwork.org
         port: 80
     client:
-      nrf:
-        - uri: http://nrf.5gc.mnc070.mcc999.3gppnetwork.org:80
+      scp:
+        - uri: http://scp.5gc.mnc070.mcc999.3gppnetwork.org:80
