--- a/k8s-roaming/vplmn/nssf/deployment.yaml
+++ b/k8s-roaming/vplmn/nssf/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: nssf
-          image: docker.io/library/nssf-local:v2.7.5
+          image: docker.io/library/nssf:v2.7.5
           imagePullPolicy: IfNotPresent
           command: [ "open5gs-nssfd", "-c", "/etc/open5gs/nssf.yaml" ]
           volumeMounts:
