--- a/k8s-roaming/hplmn/sepp/deployment.yaml
+++ b/k8s-roaming/hplmn/sepp/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: sepp
-          image: docker.io/library/sepp-new-v2:v2.7.5
+          image: docker.io/library/sepp:v2.7.5
           imagePullPolicy: IfNotPresent
           command: [ "open5gs-seppd", "-c", "/etc/open5gs/sepp.yaml" ]
           volumeMounts:
