--- a/k8s-roaming/vplmn/nrf/deployment.yaml
+++ b/k8s-roaming/vplmn/nrf/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: nrf
-          image: docker.io/library/nrf-local:v2.7.5
+          image: docker.io/library/nrf:v2.7.5
           imagePullPolicy: IfNotPresent
           command: [ "open5gs-nrfd", "-c", "/etc/open5gs/nrf.yaml" ]
           volumeMounts:
