--- a/k8s-roaming/vplmn/pcf/deployment.yaml
+++ b/k8s-roaming/vplmn/pcf/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: pcf
-          image: docker.io/library/pcf-local:v2.7.5
+          image: docker.io/library/pcf:v2.7.5
           imagePullPolicy: IfNotPresent
           command: [ "open5gs-pcfd", "-c", "/etc/open5gs/pcf.yaml" ]
           volumeMounts:
