--- a/k8s-roaming/hplmn/udm/deployment.yaml
+++ b/k8s-roaming/hplmn/udm/deployment.yaml
@@ -15,9 +15,15 @@ spec:
     spec:
       containers:
         - name: udm
-          image: docker.io/library/udm:v2.7.5
+          image: $(REGISTRY_URL)/udm:v2.7.5
           imagePullPolicy: IfNotPresent
           command: [ "open5gs-udmd", "-c", "/etc/open5gs/udm.yaml" ]
+          env:
+            - name: REGISTRY_URL
+              valueFrom:
+                configMapKeyRef:
+                  name: registry-config
+                  key: REGISTRY_URL
           volumeMounts:
             - name: config
               mountPath: /etc/open5gs/udm.yaml
