--- a/k8s-roaming/hplmn/ausf/deployment.yaml
+++ b/k8s-roaming/hplmn/ausf/deployment.yaml
@@ -15,15 +15,9 @@ spec:
     spec:
       containers:
         - name: ausf
-          image: $(REGISTRY_URL)/ausf:v2.7.5
+          image: docker.io/vinch05/ausf:v2.7.5
           imagePullPolicy: IfNotPresent
           command: ["open5gs-ausfd", "-c", "/etc/open5gs/ausf.yaml"]
-          env:
-            - name: REGISTRY_URL
-              valueFrom:
-                configMapKeyRef:
-                  name: registry-config
-                  key: REGISTRY_URL
           volumeMounts:
           - name: config
             mountPath: /etc/open5gs/ausf.yaml
