--- a/k8s-roaming/hplmn/nrf/deployment.yaml
+++ b/k8s-roaming/hplmn/nrf/deployment.yaml
@@ -15,15 +15,9 @@ spec:
     spec:
       containers:
         - name: nrf
-          image: $(REGISTRY_URL)/nrf:v2.7.5
+          image: docker.io/vinch05/nrf:v2.7.5
           imagePullPolicy: IfNotPresent
           command: [ "open5gs-nrfd", "-c", "/etc/open5gs/nrf.yaml" ]
-          env:
-            - name: REGISTRY_URL
-              valueFrom:
-                configMapKeyRef:
-                  name: registry-config
-                  key: REGISTRY_URL
           volumeMounts:
             - name: config
               mountPath: /etc/open5gs/nrf.yaml
