--- a/k8s-roaming/vplmn/amf/deployment.yaml
+++ b/k8s-roaming/vplmn/amf/deployment.yaml
@@ -15,15 +15,9 @@ spec:
     spec:
       containers:
         - name: amf
-          image: $(REGISTRY_URL)/amf:v2.7.5
+          image: docker.io/vinch05/amf:v2.7.5
           imagePullPolicy: IfNotPresent
           command: [ "open5gs-amfd", "-c", "/etc/open5gs/amf.yaml" ]
-          env:
-            - name: REGISTRY_URL
-              valueFrom:
-                configMapKeyRef:
-                  name: registry-config
-                  key: REGISTRY_URL
           volumeMounts:
             - name: config
               mountPath: /etc/open5gs/amf.yaml
