--- a/k8s-roaming/vplmn/upf/deployment.yaml
+++ b/k8s-roaming/vplmn/upf/deployment.yaml
@@ -15,15 +15,9 @@ spec:
     spec:
       containers:
         - name: upf
-          image: $(REGISTRY_URL)/upf:v2.7.5
+          image: docker.io/vinch05/upf:v2.7.5
           imagePullPolicy: IfNotPresent 
           command: [ "open5gs-upfd", "-c", "/etc/open5gs/upf.yaml" ]
-          env:
-            - name: REGISTRY_URL
-              valueFrom:
-                configMapKeyRef:
-                  name: registry-config
-                  key: REGISTRY_URL
           securityContext:
             privileged: true
             capabilities:
