--- a/images/sepp/Dockerfile
+++ b/images/sepp/Dockerfile
@@ -19,10 +19,18 @@ RUN apt-get update && apt-get install libgnutls28-dev libgcrypt-dev libtalloc-de
 COPY --from=builder /open5gs/install/bin/open5gs-seppd /usr/local/bin/open5gs-seppd
 COPY --from=builder /open5gs/install/etc/open5gs/sepp1.yaml /etc/open5gs/default/sepp.yaml
 COPY --from=builder /open5gs/install/etc/open5gs/tls/ca.crt /open5gs/install/etc/open5gs/tls/sepp1.crt \
-/open5gs/install/etc/open5gs/tls/sepp1.key /etc/open5gs/default/tls/
+    /open5gs/install/etc/open5gs/tls/sepp1.key /etc/open5gs/default/tls/
 COPY --from=builder /open5gs/install/lib/*/libogsproto.so.2 /open5gs/install/lib/*/libogscore.so.2 \
-/open5gs/install/lib/*/libogssbi.so.2 /open5gs/install/lib/*/libogsapp.so.2 /open5gs/install/lib/*/libogssbi-openapi.so.2 \
-/open5gs/install/lib/*/libogscrypt.so.2 /usr/local/lib/
+    /open5gs/install/lib/*/libogssbi.so.2 /open5gs/install/lib/*/libogsapp.so.2 /open5gs/install/lib/*/libogssbi-openapi.so.2 \
+    /open5gs/install/lib/*/libogscrypt.so.2 /usr/local/lib/
+
+# Copy certificates
+COPY certs/ca.crt /etc/open5gs/tls/ca/ca.crt
+COPY certs/ca.key /etc/open5gs/tls/ca/ca.key
+COPY certs/sepp-hplmn-n32c.crt /etc/open5gs/tls/n32c/tls.crt
+COPY certs/sepp-hplmn-n32c.key /etc/open5gs/tls/n32c/tls.key
+COPY certs/sepp-hplmn-n32f.crt /etc/open5gs/tls/n32f/tls.crt
+COPY certs/sepp-hplmn-n32f.key /etc/open5gs/tls/n32f/tls.key
 
 # configure dynamically linked libraries
 RUN ldconfig
