--- a/k8s-roaming/hplmn/udr/deployment.yaml
+++ b/k8s-roaming/hplmn/udr/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: udr
-          image: docker.io/vinch05/udr:v2.7.5
+          image: docker.io/library/udr-local:v2.7.5
           imagePullPolicy: IfNotPresent
           command: [ "open5gs-udrd", "-c", "/etc/open5gs/udr.yaml" ]
           volumeMounts:
